--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+
+
     <!-- FILTER -->
     <img class="img1" src="https://cdn.britannica.com/86/75886-050-B481C97E/Apricots.jpg" width="500px" alt="">
     <img class="img2" src="https://cdn.britannica.com/86/75886-050-B481C97E/Apricots.jpg" width="500px" alt="">
@@ -22,6 +25,9 @@
     <img class="img9" src="https://cdn.britannica.com/86/75886-050-B481C97E/Apricots.jpg" width="500px" alt="">
     <img class="img10" src="https://cdn.britannica.com/86/75886-050-B481C97E/Apricots.jpg" width="500px" alt="">
     <img class="img11" src="https://cdn.britannica.com/86/75886-050-B481C97E/Apricots.jpg" width="500px" alt="">
+
+
+
     <!-- TRANSITION -->
     <div class="transition"></div>
     <div class="transition-delay"></div>
@@ -33,6 +39,21 @@
     <div class="transition-timing-function" id="ease-out">ease-out</div>
     <div class="transition-timing-function" id="ease-in-out">ease-in-out</div>
     <div class="transition-timing-function" id="cubic-bazier">cubic-bazier</div>
+
+
+
+    <!-- BOX SHADOW -->
+    <div class="box-shadow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ex sit, dolores impedit
+        cupiditate corporis deleniti pariatur tempore nesciunt, saepe incidunt fuga totam hic placeat neque error porro
+        quisquam veniam!</div>
+    <div class="inset">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias adipisci illum quod natus, libero
+        enim repellat? Aut cum assumenda ab? Qui ducimus repellat fugit laboriosam beatae earum nostrum ad praesentium?
+    </div>
+    <div class="text-shadow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nesciunt eius
+        voluptate ad assumenda saepe dolorem veniam nemo repellendus quas at, facere doloremque sit laudantium,
+        praesentium itaque totam? Molestiae, vitae.</div>
+
+
 
 </body>
 
